# 3ModulesApp

./: CMakeLists.txt  Makefile
include/: Generator_M1.h  IModule.h  Recorder_M3.h  SequenceFinder.h
src/: Generator_M1.cpp  Recorder_M3.cpp  SequenceFinder.cpp  main.cpp
